# tiktok-techjam-2024

./: .cache  .gitignore  README.md  docker-compose.yml
database/: Dockerfile  init.sql  mongo-init.js
python/: kmeans.py  model_functions.py  model_interface.py  python_api.py  spotipy_interface.py
reverseproxy/: Dockerfile
reverseproxy/conf.d/: default.conf
server/: ;  Cargo.toml  Dockerfile  README.md  bun.lockb  package.json
server/src/: index.ts  main.rs
server/src/auth/: login.rs  register.rs
server/src/lib/: auth.ts  middleware.ts  schemas.ts
server/src/lib/spotify/: auth.ts
server/src/routes/: handle_get.rs  routes.rs  spotifyRoutes.ts  spotify_routes.rs  userRoutes.ts  user_routes.rs
server/src/schemas/: song.rs  user.rs
server/src/spotify/: auth.rs  fetch_songs.rs  swipe.rs
techjam/: app.json  package-lock.json  package.json  tsconfig.json
techjam/app/: SignInError.tsx  SignUpScreen.tsx  _layout.tsx  index.tsx
techjam/app/(tabs)/: HomePage.tsx  _layout.tsx  explore.tsx
techjam/assets/songs/: playListData.tsx
techjam/components/: CustomButton.tsx  CustomInput.tsx  MusicCard.tsx  PlayBack.tsx  SpotifyContent.tsx  WebPlayback.tsx
techjam/ios/: Podfile
techjam/ios/techjam/: Info.plist
techjam/ios/techjam.xcodeproj/: project.pbxproj
techjam/ios/techjam.xcodeproj/xcshareddata/xcschemes/: techjam.xcscheme
techjam/ios/techjam/Supporting/: Expo.plist
