[package]
name = "techjam-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
mongodb = "3.0.0"
bcrypt = "0.15.1"
reqwest = "0.12.5"
sha2 = "0.10.8"
hmac = "0.12.1"
jsonwebtoken = "9.3.0"
serde_json = "1.0.119"
