[package]
name = "techjam-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = "1.0.203"
bcrypt = "0.15.1"
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.0"
serde_json = "1.0.119"
rand = "0.8.5"
serde_urlencoded = "0.7.1"
base64 = "0.22.1"
tokio-postgres = "0.7.10"
bytes = "1.6.0"
dotenv = "0.15.0"
axum-extra = { version = "0.9.3", features = ["cookie"] }
pyo3 = { version = "0.22.1", features = ["auto-initialize"] }
